refactor: remove view folder, put vue project to the root folder

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: web
     name: portfolio-site
     env: static
-    buildCommand: cd view && npm install && npm run build
-    staticPublishPath: view/dist
+    buildCommand: npm install && npm run build
+    staticPublishPath: dist
     branch: main
