--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,23 @@
-# Logs
-logs
-*.log
+.DS_Store
+node_modules
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Dependency directories
-node_modules/
-
-# Production build
-dist/
-
-# Local environment
-.env.local
-.env.*.local
-
-# Editor folders
-.vscode/
-.idea/
-.DS_Store
-
-# Optional
-coverage/
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
